--- a/app/src/main/res/layout/fragment_place.xml
+++ b/app/src/main/res/layout/fragment_place.xml
@@ -18,6 +18,7 @@
         android:background="@color/colorPrimary">
 
         <EditText
+            android:gravity="center"
             android:id="@+id/searchPlaceEdit"
             android:layout_width="match_parent"
             android:layout_height="40dp"
