--- a/app/src/main/res/layout/now.xml
+++ b/app/src/main/res/layout/now.xml
@@ -11,7 +11,7 @@
         android:layout_height="70dp"
         android:fitsSystemWindows="true">
 
-        <Button
+        <com.google.android.material.button.MaterialButton
             android:id="@+id/navBtn"
             android:layout_width="30dp"
             android:layout_height="30dp"
